--- a/nvme-rhel-83.adoc
+++ b/nvme-rhel-83.adoc
@@ -248,62 +248,46 @@ FCP CMPL: xb 00001f50 Err 0000d9f8
 
 include::_include/nvme/nvme-enabling-broadcom-1mb-size.adoc[]
 
-== Validate NVMe/FC
+== Step 5: Validate NVMe-oF
 
-You can use the following procedure to validate NVMe/FC.
+include::_include/nvme/nvme-validate-nvme-of.adoc[]
 
-.Steps
-
-.	Verify the following NVMe/FC settings:
+. Verify that the controller state of each path is live and has the correct ANA status:
 +
+[source,cli]
 ----
-# cat /sys/module/nvme_core/parameters/multipath
-Y
+nvme list-subsys /dev/nvme1n1 
 ----
 +
+.Show example
+[%collapsible]
+====
+[subs=+quotes]
 ----
-# cat /sys/class/nvme-subsystem/nvme-subsys*/model
-NetApp ONTAP Controller
-NetApp ONTAP Controller
-----
-+
-----
-# cat /sys/class/nvme-subsystem/nvme-subsys*/iopolicy
-round-robin
-round-robin
-----
-
-.	Verify that the namespaces are created and properly discovered on the host.
-+
-----
-/dev/nvme0n1     814vWBNRwf9HAAAAAAAB  NetApp ONTAP Controller                1                  85.90 GB / 85.90 GB     4 KiB + 0 B   FFFFFFFF
-/dev/nvme0n2     814vWBNRwf9HAAAAAAAB  NetApp ONTAP Controller                2                  85.90 GB / 85.90 GB     4 KiB + 0 B   FFFFFFFF
-/dev/nvme0n3     814vWBNRwf9HAAAAAAAB  NetApp ONTAP Controller                3                  85.90 GB / 85.90 GB     4 KiB + 0 B   FFFFFFFF
-----
-
-.	Verify the status of the ANA paths.
-+
-----
-# nvme list-subsys /dev/nvme0n1
 nvme-subsys0 - NQN=nqn.1992-08.com.netapp:sn.5f5f2c4aa73b11e9967e00a098df41bd:subsystem.nvme_141_1
 \
-+- nvme0 fc traddr=nn-0x203700a098dfdd91:pn-0x203800a098dfdd91 host_traddr=nn-0x200000109b1c1204:pn-0x100000109b1c1204 live inaccessible
-+- nvme1 fc traddr=nn-0x203700a098dfdd91:pn-0x203900a098dfdd91 host_traddr=nn-0x200000109b1c1204:pn-0x100000109b1c1204 live inaccessible
-+- nvme2 fc traddr=nn-0x203700a098dfdd91:pn-0x203a00a098dfdd91 host_traddr=nn-0x200000109b1c1205:pn-0x100000109b1c1205 live optimized
-+- nvme3 fc traddr=nn-0x203700a098dfdd91:pn-0x203d00a098dfdd91 host_traddr=nn-0x200000109b1c1205:pn-0x100000109b1c1205 live optimized
++- nvme0 fc traddr=nn-0x203700a098dfdd91:pn-0x203800a098dfdd91 host_traddr=nn-0x200000109b1c1204:pn-0x100000109b1c1204 *live inaccessible*
++- nvme1 fc traddr=nn-0x203700a098dfdd91:pn-0x203900a098dfdd91 host_traddr=nn-0x200000109b1c1204:pn-0x100000109b1c1204 *live inaccessible*
++- nvme2 fc traddr=nn-0x203700a098dfdd91:pn-0x203a00a098dfdd91 host_traddr=nn-0x200000109b1c1205:pn-0x100000109b1c1205 *live optimized*
++- nvme3 fc traddr=nn-0x203700a098dfdd91:pn-0x203d00a098dfdd91 host_traddr=nn-0x200000109b1c1205:pn-0x100000109b1c1205 *live optimized*
 ----
+====
 
-.	Verify the NetApp plug-in for ONTAP devices:
+. Verify that the NetApp plug-in displays the correct values for each ONTAP namespace device:
 +
 [role="tabbed-block"]
-====
+=====
 .Column
 --
+[source,cli]
 ----
-# nvme netapp ontapdevices -o column
+nvme netapp ontapdevices -o column
 ----
-*Example output*
 
+.Show example
+[%collapsible]
+====
+[subs=+quotes]
 ----
 Device               Vserver            Namespace Path                           NSID                      UUID                     Size
 --------------- --------------- ---------------------------------------------  -------- --------------------------------------  ---------
@@ -311,13 +295,19 @@ Device               Vserver            Namespace Path                          
 /dev/nvme0n2      vs_fcnvme_141     /vol/fcnvme_141_vol_1_0_0/fcnvme_141_ns        2      04bf9f6e-9031-40ea-99c7-a1a61b2d7d08    85.90GB
 /dev/nvme0n3      vs_fcnvme_141     /vol/fcnvme_141_vol_1_1_1/fcnvme_141_ns        3      264823b1-8e03-4155-80dd-e904237014a4    85.90GB
 ----
+====
 --
 .JSON
 --
+[source,cli]
 ----
-# nvme netapp ontapdevices -o json
+nvme netapp ontapdevices -o json
 ----
-*Example output*
+
+.Show example
+[%collapsible]
+====
+[subs=+quotes]
 ----
 {
 "ONTAPdevices" : [
@@ -353,8 +343,9 @@ Device               Vserver            Namespace Path                          
        },
   ]
 ----
---
 ====
+--
+=====
 
 == Step 6: Review the known issues
 
