--- a/nvme-rhel-95.adoc
+++ b/nvme-rhel-95.adoc
@@ -15,20 +15,7 @@ summary: How to Configure NVMe-oF Host for RHEL 9.5 with ONTAP
 [.lead]
 include::_include/nvme/nvme-introduction.adoc[]
 
-.About this task 
-You can use the following support and features with the NVMe-oF host configuration for Red Hat Enterprise Linux (RHEL) 9.5. You should also review the known limitations before starting the configuration process.
-
-* Support available:
-** Support for NVMe over TCP (NVMe/TCP) in addition to NVMe over Fibre Channel (NVMe/FC). The NetApp plug-in in the native `nvme-cli` package displays ONTAP details for both NVMe/FC and NVMe/TCP namespaces.
-** Running both NVMe and SCSI traffic on the same host. For example, you can configure dm-multipath for SCSI mpath devices for SCSI LUNs and use NVMe multipath to configure NVMe-oF namespace devices on the host.
-** RHEL 9.5 enables in-kernel NVMe multipath for NVMe namespaces by default, removing the need for explicit settings.
-** Beginning with ONTAP 9.12.1, support for secure in-band authentication is introduced for NVM/TCP. You can use secure in-band authentication for NVMe/TCP with RHEL 9.5.
-+
-For additional details on supported configurations, see the link:https://mysupport.netapp.com/matrix/[Interoperability Matrix Tool^].
-* Features available:
-** There are no new features in this release.
-* Known limitations: 
-** There are no known limitations.
+This document describes how to configure NVMe-oF hosts for Red Hat Enterprise Linux (RHEL) 9.5. For additional support and feature information, refer to link:hu_nvme_index.adoc[NVME-oF Overview^]. There are no known limitations for RHEL 9.5.
 
 == Step 1: Optionally, enable SAN booting
 
