--- a/nvme-rhel-82.adoc
+++ b/nvme-rhel-82.adoc
@@ -15,20 +15,24 @@ summary: How to Configure NVMe/FC Host for RHEL 8.2 with ONTAP
 [.lead]
 include::_include/nvme/nvme-introduction.adoc[]
 
-.About this task 
-You can use the following support and features with the NVMe-oF host configuration for Red Hat Enterprise Linux (RHEL) 8.2. You should also review the known limitations before starting the configuration process.
+This document describes how to configure NVMe-oF hosts for Red Hat Enterprise Linux (RHEL) 8.2. For additional support and feature information, refer to link:hu_nvme_index.adoc[NVME-oF Overview^]. The following are known limitations for RHEL 8.2:
 
-* Support available:
-** Beginning with ONTAP 9.6, NVMe/FC is supported for Red Hat Enterprise Linux (RHEL) 8.2. The RHEL 8.2 host runs both NVMe and SCSI traffic through the same FC initiator adapter ports. See the link:https://hwu.netapp.com/Home/Index[Hardware Universe^] for a list of supported FC adapters and controllers.
-** Beginning with RHEL 8.2, the NetApp plug-in in the native `nvme-cli` package displays ONTAP details for both NVMe/FC and NVMe/TCP namespaces.
-+
-For additional details on supported configurations, see the link:https://mysupport.netapp.com/matrix/[Interoperability Matrix Tool^].
-* Features available:
-**	Beginning with RHEL 8.2, the native `nvme-cli` package includes `nvme-fc auto-connect` scripts, elimintating the need to install external vendor-provided outbox auto-connect scripts.
-** A native `udev` rule is also provided in the `nvme-cli` package, which enables round-robin load balancing for NVMe multipath. Therefore, you do not need to manually create the rule (as per RHEL 8.1).
-* Known limitations: 
-** In-kernel NVMe multipath is disabled by default on NVMe-oF hosts in RHEL 8.2, so you must enable it manually.
-** SAN booting using the NVMe-oF protocol is not currently supported.
+* SAN booting using the NVMe-oF protocol is not currently supported.
+* In-kernel NVMe multipath is disabled by default on NVMe-oF hosts in RHEL 8.2; you must enable it manually.
+
+Beginning with RHEL 8.2, nvme-fc auto-connect scripts are included in the native nvme-cli package. You can use these native auto-connect scripts instead of having to install the external vendor provided outbox auto-connect scripts.
+
+Beginning with RHEL 8.2, a native udev rule is already provided as part of the nvme-cli package which enables round-robin load balancing for NVMe multipath. You need not manually create this rule any more (as was done in RHEL 8.1).
+
+Beginning with RHEL 8.2, the NetApp plug-in in the native nvme-cli package is capable of displaying ONTAP details for ONTAP namespaces.
+
+[cols=2*,options="header",cols="25,75"]
+|===
+| heading column 1
+| heading column 2
+| row 1 column 1 | row 1 column 2
+| row 2 column 1 | row 2 column 2
+|===
 
 == Step 1: Optionally, enable SAN booting
 
