--- a/nvme-rhel-84.adoc
+++ b/nvme-rhel-84.adoc
@@ -15,17 +15,11 @@ summary: How to Configure NVMe-oF Host for RHEL 8.4 with ONTAP
 [.lead]
 include::_include/nvme/nvme-introduction.adoc[]
 
-.About this task 
-You can use the following support and features with the NVMe-oF host configuration for Red Hat Enterprise Linux (RHEL) 8.4. You should also review the known limitations before starting the configuration process.
+This document describes how to configure NVMe-oF hosts for Red Hat Enterprise Linux (RHEL) 8.4. For additional support and feature information, refer to link:hu_nvme_index.adoc[NVME-oF Overview^]. The following are known limitations for RHEL 8.4:
 
-* Support available:
-** There is no new support available in this release.
-* Features available:
-** There are no new features in this release.
-* Known limitations: 
-** In-kernel NVMe multipath is disabled by default on NVMe-oF hosts in RHEL 8.4, so you must enable it manually.
-** On RHEL 8.4 hosts, NVMe/TCP is a technology preview feature due to known issues.
-** SAN booting using the NVMe-oF protocol is not currently supported.
+* SAN booting using the NVMe-oF protocol is not currently supported.
+* In-kernel NVMe multipath is disabled by default on NVMe-oF hosts in RHEL 8.4; you must enable it manually.
+* On RHEL 8.4 hosts, NVMe/TCP is available as a technology preview due to known issues.
 
 == Step 1: Optionally, enable SAN booting
 
