--- a/nvme-rhel-10.adoc
+++ b/nvme-rhel-10.adoc
@@ -20,8 +20,9 @@ This document describes how to configure NVMe-oF hosts for Red Hat Enterprise Li
 * DM multipath support for NVMe-oF is not supported.
 * Avoid issuing the `nvme disconnect-all` command on systems booting from SAN over NVMe-TCP or NVMe-FC namespaces because it disconnects both root and data filesystems and might lead to system instability.
 
-== Step 1: Optionally, enable SAN booting
-include::_include/nvme/enable-san-booting.adoc[]
+== Step 1: Optionally, enable SAN booting 
+
+You can configure your host to use SAN booting to simplify deployment and improve scalability. Refer to link:nvme-enable-SAN-booting.adoc[Enable SAN booting^].
 
 == Step 2: Validate software versions
 
@@ -292,7 +293,7 @@ The expected ouptut is 1.
 
 == Step 4: Optionally, enable 1MB I/O 
 
-include::_include/nvme/nvme-enabling-broadcom-1mb-size.adoc[]
+You can increase the lpfc value to issue 1MB I/O requests on the Broadcome NVMe/FC host. Refer to  link:nvme-enable-broadcom-1mb-size.adoc[Enable 1MB I/O^].
 
 == Step 5: Verify NVMe boot services 
 
