--- a/nvme-rhel-10.adoc
+++ b/nvme-rhel-10.adoc
@@ -15,14 +15,14 @@ summary: How to Configure NVMe-oF Host for RHEL 10.0 with ONTAP
 [.lead]
 include::_include/nvme/nvme-introduction.adoc[]
 
-This document describes how to configure NVMe-oF hosts for Red Hat Enterprise Linux (RHEL) 10.0. For additional support and feature information, refer to link:hu-nvme-index.adoc[NVME-oF Overview^]. The following are known limitations for RHEL 10.0:
+This document describes how to configure NVMe-oF hosts for Red Hat Enterprise Linux (RHEL) 10.0. For additional support and feature information, refer to link:hu-nvme-index.html[NVME-oF Overview^]. The following are known limitations for RHEL 10.0:
 
 * DM multipath support for NVMe-oF is not supported.
 * Avoid issuing the `nvme disconnect-all` command on systems booting from SAN over NVMe-TCP or NVMe-FC namespaces because it disconnects both root and data filesystems and might lead to system instability.
 
 == Step 1: Optionally, enable SAN booting 
 
-You can configure your host to use SAN booting to simplify deployment and improve scalability, see link:nvme-enable-SAN-booting.adoc[Enable SAN booting^].
+You can configure your host to use SAN booting to simplify deployment and improve scalability, see link:nvme-enable-SAN-booting.html[Enable SAN booting^].
 
 == Step 2: Validate software versions
 
@@ -293,7 +293,7 @@ The expected ouptut is 1.
 
 == Step 4: Optionally, enable 1MB I/O 
 
-You can increase the `lpfc` value to issue 1MB I/O requests on the Broadcome NVMe/FC host, see  link:nvme-enable-broadcom-1mb-size.adoc[Enable 1MB I/O^].
+You can increase the `lpfc` value to issue 1MB I/O requests on the Broadcome NVMe/FC host, see  link:nvme-enable-broadcom-1mb-size.html[Enable 1MB I/O^].
 
 == Step 5: Verify NVMe boot services 
 
