--- a/nvme-rhel-81.adoc
+++ b/nvme-rhel-81.adoc
@@ -15,7 +15,7 @@ summary: Describes how to configure NVMe/FC for RHEL 8.1 with ONTAP
 [.lead]
 include::_include/nvme/nvme-introduction.adoc[]
 
-For information on the support and features for NVMe-oF host configuration for Red Hat Enterprise Linux (RHEL) 8.1, refer to the link:hu_nvme_index.adoc[NVME-oF Overview^]. These are the known limitations for RHEL 8.1:
+For information on the support and features for NVMe-oF host configuration for Red Hat Enterprise Linux (RHEL) 8.1, refer to the link:hu-nvme-index.html[NVME-oF Overview^]. These are the known limitations for RHEL 8.1:
 
 * SAN booting using the NVMe-oF protocol is not currently supported.
 * In-kernel NVMe multipath is disabled by default on NVMe-oF hosts in RHEL 8.1, so you must enable it manually.
@@ -24,7 +24,7 @@ For information on the support and features for NVMe-oF host configuration for R
 
 == Step 1: Optionally, enable SAN booting
 
-include::_include/nvme/enable-san-booting.adoc[]
+You can configure your host to use SAN booting to simplify deployment and improve scalability, see link:nvme-enable-SAN-booting.html[Enable SAN booting^].
 
 == Step 2: Validate software versions
 
@@ -279,7 +279,7 @@ FCP CMPL: xb 00001f50 Err 0000d9f8
 
 == Step 4: Optionally, enable 1MB I/O 
 
-include::_include/nvme/nvme-enabling-broadcom-1mb-size.adoc[]
+You can increase the `lpfc` value to issue 1MB I/O requests on the Broadcome NVMe/FC host, see  link:nvme-enable-broadcom-1mb-size.html[Enable 1MB I/O^].
 
 == Step 5: Validate NVMe-oF
 
