--- a/nvme-rhel-96.adoc
+++ b/nvme-rhel-96.adoc
@@ -15,12 +15,13 @@ summary: How to Configure NVMe-oF Host for RHEL 9.6 with ONTAP
 [.lead]
 include::_include/nvme/nvme-introduction.adoc[]
 
-This document describes how to configure NVMe-oF hosts for Red Hat Enterprise Linux (RHEL) 9.6. For additional support and feature information, refer to link:hu_nvme_index.adoc[NVME-oF Overview^]. The following are known limitations for RHEL 9.6:
+This document describes how to configure NVMe-oF hosts for Red Hat Enterprise Linux (RHEL) 9.6. For additional support and feature information, refer to link:hu-nvme-index.html[NVME-oF Overview^]. The following are known limitations for RHEL 9.6:
 
 * Avoid issuing the `nvme disconnect-all` command on systems booting from SAN over NVMe-TCP or NVMe-FC namespaces because it disconnects both root and data filesystems and might lead to system instability.
 
 == Step 1: Optionally, enable SAN booting
-include::_include/nvme/enable-san-booting.adoc[]
+
+You can configure your host to use SAN booting to simplify deployment and improve scalability, see link:nvme-enable-SAN-booting.html[Enable SAN booting^].
 
 == Step 2: Validate software versions
 Use the following procedure to validate the minimum supported RHEL 9.6 software versions.
@@ -256,7 +257,7 @@ The expected ouptut is 1.
 
 == Step 4: Optionally, enable 1MB I/O 
 
-include::_include/nvme/nvme-enabling-broadcom-1mb-size.adoc[]
+You can increase the `lpfc` value to issue 1MB I/O requests on the Broadcome NVMe/FC host, see  link:nvme-enable-broadcom-1mb-size.html[Enable 1MB I/O^].
 
 == Step 5: Verify NVMe boot services
 With RHEL 9.6, the `nvmefc-boot-connections.service` and `nvmf-autoconnect.service` boot services included in the NVMe/FC `nvme-cli` package are automatically enabled when the system boots. 
